# xc-bela-container

./: .gitignore  .gitmodules  Dockerfile  README.md  run.sh
.devcontainer/: devcontainer.json
CustomMakefile/: CustomMakefileTop.in
CustomMakefile/Bela/: CustomMakefileBottom.in
basic/: CMakeLists.txt
example-project/: CMakeLists.txt
scripts/: build_bela.sh  build_env.sh  build_libbelafull.sh  build_libs.sh  build_packages.sh  build_settings
